--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,9 +45,12 @@ jobs:
       fail-fast: false
       matrix:
         compiler: [clang, gcc, msvc]
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        cpu_level: [baseline, avx, avx2]
-        optimized: [true, false]
+        # os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest]
+        # cpu_level: [baseline, avx, avx2]
+        cpu_level: [avx2]
+        # optimized: [true, false]
+        optimized: [true]
         exclude:
         # MSVC only works on Windows.
         - os: ubuntu-latest
@@ -113,23 +116,29 @@ jobs:
         cmake --build "${{ env.CMAKE_BUILD_DIR }}"
         --config "${{ env.CMAKE_BUILD_TYPE }}"
 
-    - name: Run C++ API Tests
-      run: ${{ env.BINARY_PATH }}snappy_unittest${{ env.BINARY_SUFFIX }}
+    # - name: Run C++ API Tests
+    #   run: ${{ env.BINARY_PATH }}snappy_unittest${{ env.BINARY_SUFFIX }}
 
-    - name: Run Compression Fuzzer
-      if: ${{ env.SNAPPY_FUZZING_BUILD == '1' }}
-      run: >-
-        ${{ env.BINARY_PATH }}snappy_compress_fuzzer${{ env.BINARY_SUFFIX }}
-        -runs=1000 -close_fd_mask=3
+    # - name: Run Compression Fuzzer
+    #   if: ${{ env.SNAPPY_FUZZING_BUILD == '1' }}
+    #   run: >-
+    #     ${{ env.BINARY_PATH }}snappy_compress_fuzzer${{ env.BINARY_SUFFIX }}
+    #     -runs=1000 -close_fd_mask=3
 
-    - name: Run Decompression Fuzzer
-      if: ${{ env.SNAPPY_FUZZING_BUILD == '1' }}
-      run: >-
-        ${{ env.BINARY_PATH }}snappy_uncompress_fuzzer${{ env.BINARY_SUFFIX }}
-        -runs=1000 -close_fd_mask=3
+    # - name: Run Decompression Fuzzer
+    #   if: ${{ env.SNAPPY_FUZZING_BUILD == '1' }}
+    #   run: >-
+    #     ${{ env.BINARY_PATH }}snappy_uncompress_fuzzer${{ env.BINARY_SUFFIX }}
+    #     -runs=1000 -close_fd_mask=3
 
-    - name: Run Benchmarks
-      run: ${{ env.BINARY_PATH }}snappy_benchmark${{ env.BINARY_SUFFIX }}
+    # - name: Run Benchmarks
+    #   run: ${{ env.BINARY_PATH }}snappy_benchmark${{ env.BINARY_SUFFIX }}
 
-    - name: Test CMake installation
-      run: cmake --build "${{ env.CMAKE_BUILD_DIR }}" --target install
+    # - name: Test CMake installation
+    #   run: cmake --build "${{ env.CMAKE_BUILD_DIR }}" --target install
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: snappy
+          path: .
