--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,13 +44,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        compiler: [clang, gcc, msvc]
+        # compiler: [clang, gcc, msvc]
+        compiler: gcc
         # os: [ubuntu-latest, macos-latest, windows-latest]
-        os: [ubuntu-latest]
+        os: ubuntu-latest
         # cpu_level: [baseline, avx, avx2]
-        cpu_level: [avx2]
+        cpu_level: avx2
         # optimized: [true, false]
-        optimized: [true]
+        optimized: true
         exclude:
         # MSVC only works on Windows.
         - os: ubuntu-latest
